# gpgpu

./: CMakeLists.txt
include/GPGPU/: GPGPU.hpp  SSBO.hpp  UBO.hpp  VAO.hpp  VBO.hpp  computeShader.hpp  compute_shader.hpp  gladLoader.hpp  graphicShader.hpp  quadRenderer.hpp  shader.hpp  texture.hpp  window.hpp
include/glad/: glad.h
src/: GPGPU.cpp  VAO.cpp  VBO.cpp  computeShader.cpp  compute_shader.cpp  gladLoader.cpp  graphicShader.cpp  main.cpp  quadRenderer.cpp  shader.cpp  texture.cpp  window.cpp
src/ext/: glad.c
src/shaders/: computeShader.cs  computeShader.glsl  fragment_shader.fs  vertex_shader.vs
test/: CMakeLists.txt  main.cpp
